--- a/siitech_index.html
+++ b/siitech_index.html
@@ -1053,42 +1053,42 @@
 			<!-- MTNet -->
 			<div class="inline-cont inline-cont-h" id="mtnetBox" style="display:;">
 				<!-- 20220224 新增區塊 主要資料區 -->
-				<div class="info-group">
+				<div class="info-group" id="shipMainInfoPoint">
 					<div class="data-group on">
 						<div class="txt-group">
 							<h4>漁船編號</h4>
 							<p>
-								<span>013647</span>
+								<span></span>
 							</p>
 						</div>
 						<div class="txt-group">
 							<h4>中文船名</h4>
 							<p>
-								<span>大益</span>
+								<span></span>
 							</p>
 						</div>
 						<div class="txt-group">
 							<h4>漁船別</h4>
 							<p>
-								<span>大型漁船</span>
+								<span></span>
 							</p>
 						</div>
 						<div class="txt-group">
 							<h4>所屬漁會</h4>
 							<p>
-								<span>台灣漁會</span>
+								<span></span>
 							</p>
 						</div>
 						<div class="txt-group">
 							<h4>主漁業經營種類</h4>
 							<p>
-								<span>帝王蟹</span>
+								<span></span>
 							</p>
 						</div>
 						<div class="txt-group">
 							<h4>總噸位</h4>
 							<p>
-								<span>30</span>
+								<span></span>
 							</p>
 						</div>
 					</div>
@@ -1376,7 +1376,7 @@
 				<div class="info-group" id="shipMemberPoint">
 					<h3>船員名單</h3>
 					<div class="data-group">
-						<div class="table-scroll" style="margin: 0 0 8px;">
+						<div class="table-scroll" style="margin: 0 0 8px;" id="shipMembersDiv">
 							<table class="siitech-table" style="width: 1200px; margin: 0;">
 								<tbody>
 									<tr>
@@ -1403,7 +1403,7 @@
 										<td>0981726662</td>
 										<td>台灣</td>
 									</tr>
-									<tr>
+									<!--<tr>
 										<td>李世賢</td>
 										<td>H123126789</td>
 										<td>2020-01-01</td>
@@ -1426,7 +1426,7 @@
 										<td>-</td>
 										<td>0981726662</td>
 										<td>台灣</td>
-									</tr>
+									</tr>-->
 								</tbody>
 							</table>
 						</div>
